2008-01-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	Run "Open with other..." application in file's directory

2008-01-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir.cc:
	Fixed problem #510567 (failed assert when deleting dir)

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-dir.h:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-rename-dialog.cc:
	Fixed problem #345314 (cursor not staying on file while renaming)

2008-01-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Point to the focused file properly

2008-01-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/image-render.cc:
	Yet another fix for problem with updating of internal viewer status bar

	* src/gnome-cmd-file-props-dialog.cc:
	Added "kbps" to Audio.Bitrate tag presented in file properties dlg

2008-01-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-lexer.ll:
	Fixed problem #508565 (improper utf-8 handling in advanced file rename tool)

	* src/gnome-cmd-advrename-dialog.cc:
	Set template combo history as case sensitive

	* src/gnome-cmd-file-list.cc:
	Yet another fix for cursor going astray

2008-01-14  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-lexer.ll:
	More C++ in advrename

2008-01-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-lexer.ll:
	C++ optimisation

2008-01-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-device.cc:
	* src/gnome-cmd-con-ftp.cc:
	Add missing "umount" cross to close-connection toolbar button

	* src/gnome-cmd-file.cc:
	Run editor application in file's directory

	* src/gnome-cmd-data.cc:
	Yet another fix for storing advrename data (regex patterns)

	* src/gnome-cmd-con-device.cc:
	Fix for memory leak

2008-01-09  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	Set default value for "/network/use_gnome_auth_manager" to FALSE