@@ -1,3 +1,9 @@
+2008-01-26  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-file.cc:
+	* src/gnome-cmd-file.h:
+	Do not use escaped directory name when runnning editor application
+
 2008-01-22  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-file-popmenu.cc:
